# symbolic-neural-networks

./: CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  symbolic.py
.github/workflows/: release.yml
examples/: symbolic_inspection.py
symbolic_neural_networks/: __init__.py  cli.py  symbolic.py
