[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-neural-networks"
version = "0.1.0"
description = "Symbolic expressions and derivatives for neural networks."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
]
authors = [{ name = "Symbolic Neural Networks Contributors" }]
keywords = ["symbolic", "neural networks", "gradients", "formal verification", "sympy"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]

[project.scripts]
symbolic-nn = "symbolic_neural_networks.cli:main"
symnnet = "symbolic_neural_networks.cli:main"

[tool.setuptools]
packages = ["symbolic_neural_networks"]
